# curly-fiesta

./: CMakeLists.txt
untitled2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
untitled2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
